Fix responsivity on mobile

--- a/styles/components/editor.css
+++ b/styles/components/editor.css
@@ -81,7 +81,7 @@ canvas {
     justify-content: center;
     background-color: var(--clr-primary-3);
     border-radius: 6px;
-    font-size: 1.5rem;
+    font-size: 1rem;
     color: var(--clr-primary1);
     border: 2px solid #333;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
