--- a/styles/setup/mq.css
+++ b/styles/setup/mq.css
@@ -107,7 +107,7 @@
     }
 
     .fa-fill {
-        font-size: 1.6rem;
+        font-size: 1.4rem;
     }
 
 }
